Sogeti.Capstone.Web/Sogeti.Capstone.Web/Content/Site.css
@font-face {
    font-family: Lato;
    src: url("../fonts/Lato/Lato-Regular.ttf");
    src: local("Lato"), url(../fonts/Lato/Lato-Regular.ttf) format('truetype');
}

.sogetiRedFont {
    color: #E85426;
}

.greyFont {
    color: #373737;
}

.sogetiRedBackground {
    background-color: #E85426;
}

html {
    background-color: #E85426;
}

.modal-title,
div,
h1,
h2,
h3 {
    font-family: Lato;
}

.modal-content {
    background-color: #373737;
    color: white;
}

.control-label {
    font-weight: normal;
}

.fade.in {
    overflow: hidden;
}

label {
    font-weight: normal;
}

.text-danger > span {
    color: #E85426;
}

/*MAKE X ON MODULE WHITE*/
div.modal-header > button > span {
    color: white;
}

.body-content.main {
    background-image: url('/Content/Images/Background Patterns/footer_lodyas.png');
}

body {
    padding-top: 50px;
    padding-bottom: 20px;
    background-color: #E85426;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
    background-color: #E85426;
}

.textRight {
    text-align: right;
}

.textLeft {
    text-align: left;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

.body-content {
    padding-left: 0;
    padding-right: 0;
}

.navbar-header {
    background-color: #E85426;
}

.navbar-brand {
    width: 155px;
}

.navbar-toggle,
.navbar-toggle:hover {
    padding-top: 12px;
    border: none !important;
    outline: none !important;
    background-color: inherit !important;
}

.navbar-toggle .icon-bar {
    width: 23px;
    height: 3px;
}

body > div.navbar.navbar-inverse.navbar-fixed-top > div > div.navbar-header > a {
    color: #fff;
}

#navHeaderMainContainer {
  background-color: #E85426;
  border-color: #E85426;
  border-bottom: 1px solid white;
}

.navbar-inverse .navbar-nav > li > a {
  color: #fff;
}

.intro-divider {
    width: 100%;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.jumbotron {
  height: 660px;
  margin-bottom: 0;
  padding: 30px 0 0;
  font-size: 21px;
  font-weight: 300;
  line-height: 2.1428571435;
  color: white;
  background-image: url('/Content/Images/Background Patterns/footer_lodyas.png');
  text-align: center;
  border-radius: 0;
}

.jumbotron h1 {
    font-size: 26px;
    margin: 50px 0 30px 0;
}

.btn-lg {
  padding: 7px 20px;
  min-width: 125px;
    max-width: 200px;
  font-size: 15px;
  line-height: 1.33;
  border-radius: 6px;
  font-weight: bold;
    margin-bottom: 10px;
}

.landing-hero {
  height: 390px;
  margin-bottom: 0;
    padding: 30px 0 0;
  font-weight: 300;
  line-height: 2.1428571435;
  color: white;
  background-color: #eeeeee;
  background-image: url('/Content/Images/Background Patterns/footer_lodyas.png');
    background-size: cover;
  text-align: center;
  border-radius: 0;
}

.stripe {
  height: 390px;
  margin-bottom: 0;
  font-weight: 300;
  line-height: 2.1428571435;
  color: white;
  background-color: #353e48;
    background-size: cover;
  text-align: center;
  border-radius: 0;
  border-top: 3px solid #E85426;
}
.vertical-center {
     display: flex;
  justify-content: center;
  flex-direction: column;
  height: 100%;
}

.primaryBackground {
    background-image: url('/Content/Images/Background Patterns/footer_lodyas.png');
}

.alternateBackground {
    background-image: url('/Content/Images/Background Patterns/gplaypattern.png');
}

.homeTitle {
    text-rendering: optimizeLegibility;
    font-size: 32px;
    margin: 35px 0 35px 0;
    line-height: 1.1;
}

.btn,
.btn:hover,
.btn:focus,
.btn:active {
    background-color: #E85426;
    border-color: #383838;
    color: white;
    outline-color: transparent;
    font-weight: normal;
}

.glyphicon.glyphicon-log-in {
    padding-right: 4px;
}

a.btn.btn-default.btn-lg.loginButton > span,
a.btn.btn-default.btn-lg.registerButton > span {
    padding-right: 4px;
}

#navHeaderCollapsed > ul.nav.navbar-nav.navbar-right > li > a {
    color: white;
}

#navHeaderCollapsed > ul.nav.navbar-nav.navbar-right {
    padding-top: 5px;
}

#navHeaderCollapsed > ul.nav.navbar-nav.navbar-right > li > a > i {
    padding-right: 3px;
}

#navHeaderCollapsed {
    border-color: white;
}

.loginButton,
.loginButton:hover,
.loginButton:active,
.loginButton:focus {
    margin-right: 15px;
    background-color: #E85426;
    border-color: #383838;
    color: white;
    font-size: 16px;
    font-weight: normal;
}

.registerButton {
    background-color: #E85426;
    border-color: #383838;
    color: white;
    font-size: 16px;
    font-weight: normal;
}

#projectButton > span,
#versionButton > span {
    background-color: transparent;
    font-weight: normal;
}

body > div.body-content > footer,
.footer {
    margin-top: 15px;
}

.whiteText {
    color: white;
}

.footer-left {
    margin-top: 10px;
}

.eventSearchBox {
    margin: 35px 0 25px 0;
    text-align: left;
}

#searchQuery {
    width: 215px;
    height: 34px;
}

.eventSearchButton {
    margin-left: 8px;
}

.eventTileButtons {
    margin: 10px 0 30px 0;
    position: absolute;
    bottom: 0;
}

.eventEditButton {
    margin-right: 5px;
}

.eventThumbnail {
    height: 550px;
    margin-bottom: 20px;
}

.eventCreateModuleContainer {
    background-color: #373737;
}

@media (max-width : 815px) {
    .footer-left {
        text-align: center;
        margin-bottom: 10px;
    }
    .footer-right {
        text-align: center;
    }
}

@media (max-width: 410px) {
    #projectButton {
        margin-bottom: 3px;
    }
}

@media (max-width: 440px) {
    .eventThumbnailColumn {
        width: 100%;
    }

    .eventThumbnail {
        height: 575px !important;
    }
}

@media (max-width: 530px) {
    .eventThumbnail {
        height: 500px;
    }
}

@media only screen and (min-width : 815px) {
    .footer-left {
        text-align: left;
        margin: 10px 0 10px 0;
    }

    .footer-right {
        text-align: right;
    }
}

/* STICKY FOOTER: START */
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    line-height: 1.2;
}

html, body {
    height: 100%;
}

.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
}
/* STICKY FOOTER: END */

